# low-level-programming-lab3

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp
dto/: CMakeLists.txt
dto/lib/: dto.cpp  dto.hpp
parser/: CMakeLists.txt
parser/lib/: CMakeLists.txt  ast.hpp  ast_printer.cpp  driver.cpp  json_to_ast.cpp  parser_driver.cpp  parser_driver.hpp
parser/lib/parser/: parser.l  parser.y
server/: CMakeLists.txt  main.cpp
server/db/: CMakeLists.txt
server/db/src/benchmark/: benchmarks.c  benchmarks.h
server/db/src/lib/: common_types.h  external_representations.h  graph_storage_lib.h  logical_structures.h  params.h  request.h  request_result.h
server/db/src/lib/file_work/: file_allocator.c  file_allocator.h  file_allocator_internals.h
server/db/src/lib/storage_work/: create_elements.c  delete_elements.c  find_element.c  find_element.h  graph_storage_interface.h  read_elements.c  storage_controller.c  storage_controller.h  string_operations.h  update_elements.c
server/db/src/main/: main.c
server/db/src/test/: allocator_tests.c  allocator_tests.h  basic_operations_tests.c  basic_operations_tests.h  main.c  read_requests_tests.c  read_requests_tests.h  update_requests_tests.c  update_requests_tests.h
server/executor/: execution_context.hpp  executor.cpp  executor.hpp
